--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "build": "node src/scripts/build.js"
   },
   "dependencies": {
+    "antd": "^2.5.0",
     "humps": "^1.1.0",
     "lodash": "^4.16.1",
     "normalizr": "^2.2.1",
+    "object-fit-images": "^2.5.9",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
+    "react-select": "^1.0.0-rc.2",
     "redux": "^3.5.2",
+    "redux-auth-wrapper": "^0.9.0",
+    "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0"
   },
   "eslintConfig": {
